--- a/package.json
+++ b/package.json
@@ -19,22 +19,19 @@
   ],
   "author": "enfermedadMntal",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
+  "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.18.6",
-    "@babel/core": "^7.18.6",
-    "@babel/node": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "mongoose": "^6.4.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
