--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0"
   }
 }
